# PIC16_compiler

./: .gitignore  CONTRIBUTING.md  COPYING.RUNTIME  Cargo.toml  DESIGN.md  LICENSE  README.md  errors.txt
docs/: CHANGELOG.md  RELEASE.md  export_study_pdf.py  pic16cc-estudio-tecnico-v3.epub  pic16cc-estudio-tecnico.md
docs/architecture/: overview.md
docs/backend/: optimization.md  overview.md  phase10-data-layout.md  phase11-aggregate-copy.md  phase12-string-pointer-data.md  phase13-rom-data-layout.md  phase14-retlw-tables.md  phase15-bitfield-codegen.md  phase16-aggregate-layout.md  phase17-dispatcher.md  phase18-stack-safety.md  phase2-abi.md  phase3-memory-model.md  phase4-stack-first-abi.md  phase4-stack-model.md  phase5-helper-calling.md  phase6-interrupts.md  phase8-struct-layout.md  phase9-switch-codegen.md
docs/developer-guide/: adding-device.md  stack-report.md
docs/devices/: overview.md
docs/diagnostics/: overview.md
docs/frontend/: overview.md  phase10-string-literals.md  phase11-aggregates.md  phase12-pointers.md  phase13-rom-address-space.md  phase14-rom-indexing.md  phase15-union-bitfields.md  phase16-multidimensional-arrays.md  phase17-function-pointers.md  phase6-isr-syntax.md  phase8-examples.md  phase8-types.md  phase9-switch.md
docs/ir/: overview.md  phase10-static-initializers.md  phase11-aggregate-initializers.md  phase12-pointer-lowering.md  phase13-rom-lowering.md  phase14-rom-read-lowering.md  phase2-lowering.md  (+10 more)
examples/: Makefile.template
scripts/: check-license-headers.sh
src/: lib.rs  main.rs
tests/: compiler_pipeline.rs
(+108 files in other folders)
