[package]
name = "pic16cc"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Experimental C compiler for PIC16 mid-range MCUs"

[[bin]]
name = "pic16cc"
path = "src/main.rs"

[lib]
name = "pic16cc"
path = "src/lib.rs"

[profile.dev]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
rust_2018_idioms = "deny"
unused_lifetimes = "deny"
unused_attributes = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
